tests/error/types-6.moc
void print(char* s) {
}

void main() {
    print = '7';
}
